--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,25 @@
-# requirements.txt
-fastapi
-uvicorn[standard]
-sqlalchemy
-asyncpg
-httpx
-jinja2
-pypdf
-reportlab
-tqdm
-python-multipart
-pydantic
-pydantic-settings
-async-lru
+# --- Core Application ---
+fastapi==0.111.0
+uvicorn[standard]==0.29.0
+starlette==0.37.2
+
+# --- Database & ORM ---
+sqlalchemy==2.0.29
+asyncpg==0.29.0
+
+# --- HTTP & API Clients ---
+httpx==0.27.0
+
+# --- Templating ---
+jinja2==3.1.4
+
+# --- PDF & Reporting ---
+pypdf==4.2.0
+reportlab==4.1.0
+
+# --- Utilities ---
+tqdm==4.66.4
+python-multipart==0.0.9
+pydantic==2.7.1
+pydantic-settings==2.2.1
+async-lru==2.0.4
